[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/Oseemono-V5Ez.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/PentaGrams Malefissent.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/weapon_free.png" type="Texture" id=3]
[ext_resource path="res://scenes/menus/startslector.gd" type="Script" id=4]
[ext_resource path="res://assets/shadow.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/cuevafondo.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/border.png" type="Texture" id=7]
[ext_resource path="res://assets/light.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 96, 256, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 224, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [  ],
"loop": true,
"name": "#default",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "crossbow",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "dagger",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "manuscript",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "potion",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "sword",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=13]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 0.698039 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 120, 120 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 120, 120 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 120, 120 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 120, 120 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 120, 120 )
modulate_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=18]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=17]
size = 25
outline_size = 1
outline_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=10]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 32 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 32, 32 )

[node name="selector" type="Node2D"]
pause_mode = 2
position = Vector2( -9, 0 )
scale = Vector2( 2, 2 )
script = ExtResource( 4 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -202.0
margin_top = -126.0
margin_right = 215.0
margin_bottom = 124.0
color = Color( 0, 0, 0, 0.352941 )

[node name="Cuevafondo" type="Sprite" parent="."]
position = Vector2( -35.75, -1 )
scale = Vector2( 1.10081, 0.887097 )
texture = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 32.0
margin_top = -56.0
margin_right = 112.0
margin_bottom = 54.0
color = Color( 0.533333, 0.501961, 0.470588, 1 )

[node name="icon3" type="AnimatedSprite" parent="."]
position = Vector2( 70.248, -38.498 )
scale = Vector2( 1.54675, 1.24987 )
frames = SubResource( 12 )
animation = "sword"

[node name="sword_button" type="Button" parent="."]
margin_left = 36.5
margin_top = -46.0
margin_right = 100.5
margin_bottom = -25.0
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 16 )
text = "SWORD"

[node name="icon2" type="AnimatedSprite" parent="."]
position = Vector2( 71.5, -5 )
scale = Vector2( 1.98438, 1.73425 )
frames = SubResource( 12 )
animation = "dagger"

[node name="dagger_button" type="Button" parent="."]
margin_left = 36.5
margin_top = -13.5
margin_right = 103.5
margin_bottom = 7.5
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 16 )
text = "DAGGER"

[node name="icon" type="AnimatedSprite" parent="."]
position = Vector2( 70, 29 )
scale = Vector2( 1.31244, 1.10931 )
frames = SubResource( 12 )
animation = "crossbow"

[node name="crossbow_button" type="Button" parent="."]
margin_left = 35.0
margin_top = 19.5
margin_right = 106.0
margin_bottom = 41.5
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 16 )
text = "CROSSBOW"

[node name="Label" type="Label" parent="."]
margin_left = -94.0
margin_top = 2.0
margin_right = 129.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0.85098, 0.85098, 0.85098, 1 )
custom_fonts/font = SubResource( 18 )
text = "Objective: 
recolect souls
Choose your starting weapon"

[node name="Border" type="Sprite" parent="."]
position = Vector2( 4.24999, -1.02499 )
scale = Vector2( 1.72594, 1.92109 )
texture = ExtResource( 7 )

[node name="Button" type="Button" parent="."]
margin_left = -100.5
margin_top = -61.5
margin_right = -74.5
margin_bottom = -25.5
custom_colors/font_color = Color( 0.619608, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "X"

[connection signal="pressed" from="sword_button" to="." method="_on_sword_button_pressed"]
[connection signal="pressed" from="dagger_button" to="." method="_on_dagger_button_pressed"]
[connection signal="pressed" from="crossbow_button" to="." method="_on_crossbow_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
